Deploy sealed-secrets to kube-system namespace

--- a/infrastructure/controllers/sealed-secrets.yaml
+++ b/infrastructure/controllers/sealed-secrets.yaml
@@ -23,7 +23,7 @@ spec:
       version: "2.17.2"
   interval: 1h0m0s
   releaseName: sealed-secrets-controller
-  targetNamespace: flux-system
+  targetNamespace: kube-system
   install:
     crds: Create
   upgrade:
