--- a/infrastructure/network/cilium-loadbalancer.yaml
+++ b/infrastructure/network/cilium-loadbalancer.yaml
@@ -4,4 +4,5 @@ metadata:
   name: "lb-pool"
 spec:
   blocks:
-    - cidr: "192.168.31.0/24"
+    - start: "192.168.31.10"
+      stop: "192.168.31.250"
