--- a/infrastructure/network/base/cilium-loadbalancer.yaml
+++ b/infrastructure/network/base/cilium-loadbalancer.yaml
@@ -4,5 +4,5 @@ metadata:
   name: "lb-pool"
 spec:
   blocks:
-    - start: "192.168.31.10"
-      stop: "192.168.31.250"
+    - start: "${LB_POOL_START}"
+      stop: "${LB_POOL_STOP}"
