--- a/infrastructure/configs/cluster-issuers.yaml
+++ b/infrastructure/configs/cluster-issuers.yaml
@@ -8,8 +8,10 @@ spec:
     email: ${ACME_EMAIL}
     server: ${ACME_SERVER}
     privateKeySecretRef:
-      name: letsencrypt-nginx
+      name: letsencrypt-cloudflare
     solvers:
-      - http01:
-          ingress:
-            class: nginx
+      - dns01:
+          cloudflare:
+            apiTokenSecretRef:
+              name: cloudflare-api-token
+              key: api-token
