--- a/clusters/prod/infrastructure.yaml
+++ b/clusters/prod/infrastructure.yaml
@@ -81,3 +81,21 @@ spec:
       ACME_EMAIL: "benjamin@rottler.io"
       ACME_SERVER: "https://acme-v02.api.letsencrypt.org/directory"
       EXTERNAL_DOMAIN: "k8s.home.rottlr.de"
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: infra-observability
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: infra-controllers
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/observability
+  prune: true
+  wait: true
