--- a/infrastructure/controllers/cert-manager.yaml
+++ b/infrastructure/controllers/cert-manager.yaml
@@ -32,3 +32,7 @@ spec:
       interval: 12h
   values:
     installCRDs: true
+    prometheus:
+      enabled: true
+      podmonitor:
+        enabled: true
