--- a/infrastructure/observability/grafana-k8s-monitoring.yaml
+++ b/infrastructure/observability/grafana-k8s-monitoring.yaml
@@ -115,6 +115,11 @@ spec:
                 - alloy-singleton
                 - alloy-logs
                 - alloy-receiver
+      cert-manager:
+        instances:
+          - name: cert-manager
+            labelSelectors:
+              app.kubernetes.io/name: cert-manager
     alloy-metrics:
       enabled: true
     alloy-singleton:
