--- a/infrastructure/network/base/gateway.yaml
+++ b/infrastructure/network/base/gateway.yaml
@@ -1,11 +1,11 @@
 # https://docs.cilium.io/en/stable/network/servicemesh/gateway-api/gateway-api/
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: GatewayClass
-metadata:
-  name: cilium
-spec:
-  controllerName: io.cilium/gateway-controller
+# ---
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: GatewayClass
+# metadata:
+#   name: cilium
+# spec:
+#   controllerName: io.cilium/gateway-controller
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
