--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -4,3 +4,5 @@ resources:
   - sealed-secrets.yaml
   - cert-manager.yaml
   - external-dns.yaml
+  - weave-gitops.yaml
+  - weave-gitops-secret.yaml
