--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - sealed-secrets.yaml
   - cert-manager.yaml
   - external-dns.yaml
+  - longhorn.yaml
   - weave-gitops.yaml
   - weave-gitops-secret.yaml
