--- a/infrastructure/controllers/longhorn.yaml
+++ b/infrastructure/controllers/longhorn.yaml
@@ -36,6 +36,11 @@ spec:
         name: longhorn-repo
       version: v1.9.0
   interval: 24h
+  values:
+    defaultSettings:
+      defaultDataPath: "/var/mnt/longhorn-storage"
+      defaultReplicaCount: 2
+      replicaAutoBalance: "least-effort"
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
