--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - cert-manager.yaml
   - external-dns.yaml
   - longhorn.yaml
+  - kyverno.yaml
   - weave-gitops.yaml
   - weave-gitops-secret.yaml
