--- a/infrastructure/observability/kustomization.yaml
+++ b/infrastructure/observability/kustomization.yaml
@@ -1,7 +1,5 @@
----
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-resources:
-  - namespace.yaml
-  - grafana-cloud-sealed-secret.yaml
-  - grafana-k8s-monitoring.yaml
+# ---
+# apiVersion: kustomize.config.k8s.io/v1beta1
+# kind: Kustomization
+# resources:
+#   - namespace.yaml
