--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - sealed-secrets.yaml
-  - cert-manager.yaml
+  #  - cert-manager.yaml
   - external-dns.yaml
   - longhorn.yaml
   - weave-gitops.yaml
